stylesheets/style.css
/* === IMPORTS === */
@import url('https://fonts.googleapis.com/css2?family=Mozilla+Text:wght@200..700&display=swap');

/* === TOP LEVEL STYLINGS === */
html {
    scroll-behavior: smooth;
}
body {
    height: 100%;
    background-image: url("../images/danilo.jpg");
    background-repeat: no-repeat;
    background-size: 100% 100%;

    display: flex;
    flex-direction: column;
}

body > * {
    flex-shrink: 0;
}

body > div {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

nav {
    background: white;
    margin-bottom: 1rem;
}

/* === SPECIFIC STYLINGS === */
#fadein {
    position: fixed;
    z-index: 2;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    margin: 0;
    background: white;
}

.card > img {
    object-fit: contain;
    max-width: 20rem;
    width: auto;
    height: auto;
}

.card-div {
    margin: 1rem;

    display: flex;
    flex-direction: column;
}
.card-div > div:nth-child(odd) {
    align-self: flex-start;
}
.card-div > div:nth-child(even) {
    align-self: flex-end;
}
.card-div > div {
    border: 2px solid black;
}


/* === FONTS === */
.mozilla-text-plain {
    font-family: "Mozilla Text", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

.mozilla-text-h1 {
    font-family: "Mozilla Text", sans-serif;
    font-weight: 700;
    font-style: italic;
    font-size: 3rem;
}

.mozilla-text-h2 {
    font-family: "Mozilla Text", sans-serif;
    font-weight: 550;
    font-style: normal;
    font-size: 2rem;
}

.mozilla-text-b {
    font-family: "Mozilla Text", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
}

/* === ANIMATIONS AND MEDIA === */
@keyframes fadeinall {
    0% {
        opacity: 1;
    }
    97% {
        opacity: 0;
    }
    98% {
        opacity: 0;
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
    100% {
        opacity: 0;
        -webkit-transform: translateY(-100%);
        transform: translateY(-100%);
        z-index: -1;
    }
}

@media only screen and (max-width: 1250px) {
    .card > img {
        display: none;
    }
}

